--- a/testtest.html
+++ b/testtest.html
@@ -1779,6 +1779,8 @@ window.addEventListener('load', handleUrlParameters);
             // const blob = new Blob([htmlContent], { type: 'text/html' });
             // saveAs(blob, "incident_generator_template.html");
         }
+
+        window.addEventListener('load', handleUrlParametersAndFetchData);
     </script>
 </body>
 </html>
