--- a/testtest.html
+++ b/testtest.html
@@ -453,7 +453,7 @@
                 document.getElementById('submitterEmail').readOnly = true;
                 console.log("2d");
                 // Change submit button text to indicate this is an update
-                document.getElementById('submitButton').textContent = 'Update Submission';
+                document.getElementById('submitToSheetButton').textContent = 'Update Submission';
                 console.log("2e");
                 // Add a notice at the top of the form
                 const notice = document.createElement('div');
