--- a/testtest.html
+++ b/testtest.html
@@ -497,7 +497,8 @@ async function fetchAndPopulateData(userEmail, editToken) {
             method: 'GET',
             headers: {
                 'Content-Type': 'application/json'
-            }
+            },
+            credentials: 'include'
 
 
 
