--- a/testtest.html
+++ b/testtest.html
@@ -539,8 +539,8 @@ const respons = await fetch(appsScriptUrl, {
 });
 
 // You can then process the response as usual
-const result = await respons.json(); // Or .text()
-console.log(result);
+const resul = await respons.json(); // Or .text()
+console.log(resul);
 
 
 
