--- a/testtest.html
+++ b/testtest.html
@@ -521,8 +521,12 @@ const dataToSend = {
     incidentNumber: 'INC-123'
 };
 
+console.log("n1");
+
+
 // 1. Create a new FormData object
 const myFormData = new FormData();
+        console.log("n2");
 
 // 2. Append each piece of data to the FormData object
 for (const key in dataToSend) {
@@ -530,6 +534,7 @@ for (const key in dataToSend) {
         myFormData.append(key, dataToSend[key]);
     }
 }
+        console.log("n3");
 
 // 3. Use the FormData object in your fetch request
 // The browser will automatically set the 'Content-Type' header to 'multipart/form-data'
@@ -537,6 +542,7 @@ const respons = await fetch(appsScriptUrl, {
     method: "POST",
     body: myFormData, // Use the FormData object here
 });
+        console.log("n4");
 
 // You can then process the response as usual
 const resul = await respons.json(); // Or .text()
