--- a/testtest.html
+++ b/testtest.html
@@ -526,7 +526,7 @@ console.log("n1");
 
 // 1. Create a new FormData object
 const myFormData = new FormData();
-formDataForNewPost.append('actionType', 'update_status');
+myFormData.append('actionType', 'update_status');
         console.log("n2");
 
 // 2. Append each piece of data to the FormData object
