--- a/testtest.html
+++ b/testtest.html
@@ -421,10 +421,10 @@
 
 
 
-
+         const appsScriptUrl1 = "https://script.google.com/macros/s/AKfycbyDh9FXIv_HjslUdP6H-AwvoOlIfI1HCQSMc0Z_lUS_mbrRWkDpqdIckm2cYvpr7JqZ7w/exec";
         //test
         console.log("staaart1");
-        const response2 = await fetch(appsScriptUrl);
+        const response2 = await fetch(appsScriptUrl1);
         const text = await response2.text();
         console.log(text);
         console.log("eeend1");
